--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SPARQL Playground</title>
-  <base href="'/sparql-playground-app'">
+  <base href="/sparql-playground-app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.82c1f09451bcf5b079ed.css"></head>
