--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <base href="/sparql-playground-app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="/logycon.github.io/sparql-playground-app/styles.82c1f09451bcf5b079ed.css"></head>
+<link rel="stylesheet" href="/sparql-playground-app/styles.82c1f09451bcf5b079ed.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="/logycon.github.io/sparql-playground-app/runtime.2c863e83b92e5f960e0a.js"></script><script type="text/javascript" src="/logycon.github.io/sparql-playground-app/es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="/logycon.github.io/sparql-playground-app/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="/logycon.github.io/sparql-playground-app/main.b852e738b3d7114a8634.js"></script></body>
+<script type="text/javascript" src="/sparql-playground-app/runtime.eba8e345092537ce815b.js"></script><script type="text/javascript" src="/sparql-playground-app/es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="/sparql-playground-app/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="/sparql-playground-app/main.b852e738b3d7114a8634.js"></script></body>
 </html>
