--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>SPARQL Playground</title>
   <base href="/sparql-playground-app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/sparq-playground-app/favicon.ico">
 <link rel="stylesheet" href="/sparql-playground-app/styles.89f9615058fb967940ee.css"></head>
 <body>
   <app-root></app-root>
