--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <title>SPARQL Playground</title>
   <base href="/sparql-playground-app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/sparq-playground-app/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/sparql-playground-app/favicon.ico">
 <link rel="stylesheet" href="/sparql-playground-app/styles.89f9615058fb967940ee.css"></head>
 <body>
   <app-root></app-root>
 <script type="text/javascript" src="/sparql-playground-app/runtime.eba8e345092537ce815b.js"></script><script type="text/javascript" src="/sparql-playground-app/es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="/sparql-playground-app/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="/sparql-playground-app/main.0819ac13ea359f44fa7d.js"></script></body>
+
+<script type="application/ld+json">
+  {
+    "@context": "https://logycon.github.io/sparql-playground-app/",
+    "@type": "Application",
+    "url": "https://logycon.github.io/sparql-playground-app/",
+    "name": "SPARQL Playground",
+  }
+</script>
+
 </html>
