--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 
 <script type="application/ld+json">
   {
-    "@context": "https://logycon.github.io/sparql-playground-app/",
-    "@type": "Application",
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
     "url": "https://logycon.github.io/sparql-playground-app/",
-    "name": "SPARQL Playground"
+    "name": "SPARQL Playground",
+    "applicationCategory": "Semantic, SPARQL, Query",
+    "creator": {
+      "email": "igor@logycon.com"
+    }
   }
 </script>
 
