--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     "@type": "WebApplication",
     "url": "https://logycon.github.io/sparql-playground-app/",
     "name": "SPARQL Playground",
-    "applicationCategory": "Semantic, SPARQL, Query",
+    "applicationCategory": "Semantic, SPARQL, Query"
     "creator": {
       "email": "igor@logycon.com"
     }
