--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     "url": "https://logycon.github.io/sparql-playground-app/",
     "name": "SPARQL Playground",
     "applicationCategory": "Semantic, SPARQL, Query",
+    "browserRequirements": "Requires Javascript, HTML5",
+    "operatingSystem": "Windows, Mac, Linux",
     "creator": {
+      "@context": "https://schema.org",
+      "@type": "Person",
       "email": "igor@logycon.com"
     }
   }
