--- a/index.html
+++ b/index.html
@@ -1,33 +1,15 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>SPARQL Playground</title>
   <base href="/sparql-playground-app">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/sparql-playground-app/favicon.ico">
-<link rel="stylesheet" href="/sparql-playground-app/styles.89f9615058fb967940ee.css"></head>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="/sparql-playground-app/styles.6d63712accf00afcd077.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="/sparql-playground-app/runtime.eba8e345092537ce815b.js"></script><script type="text/javascript" src="/sparql-playground-app/es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="/sparql-playground-app/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="/sparql-playground-app/main.011ca6d37106e8ff05b0.js"></script></body>
-
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebApplication",
-    "url": "https://logycon.github.io/sparql-playground-app/",
-    "name": "SPARQL Playground",
-    "applicationCategory": "Semantic, SPARQL, Query",
-    "browserRequirements": "Requires Javascript, HTML5",
-    "operatingSystem": "Windows, Mac, Linux",
-    "creator": {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "email": "igor@logycon.com"
-    }
-  }
-</script>
-
+<script src="/sparql-playground-app/runtime-es2015.8754eeac297e02f5dcf9.js" type="module"></script><script src="/sparql-playground-app/runtime-es5.8754eeac297e02f5dcf9.js" nomodule defer></script><script src="/sparql-playground-app/polyfills-es5.fefa72e12b2a2d6ef7f2.js" nomodule defer></script><script src="/sparql-playground-app/polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="/sparql-playground-app/main-es2015.6dece6a665b9f9b2657c.js" type="module"></script><script src="/sparql-playground-app/main-es5.6dece6a665b9f9b2657c.js" nomodule defer></script></body>
 </html>
